# lns

./: .gitattributes  CMakeLists.txt  LICENSE  README.md  README.txt  environments.h  errors.h  expr.h  generate.java  install.sh  interpreter.h  options.h  parser.h  scanner.h  stmt.h
docs/: wiki.md
examples/: myprogram.nls  nano.save  sample_script.lns
extra/sublime_text/: lns.sublime-build  lns.sublime-syntax
install/: install.sh  install_libraries.sh  update_libraries.sh  update_lns.sh
lib/: cplnative.sh  defs.lns  errors.lns  files.lns  input.lns  math.lns  parsing.lns  std.lns  string.lns  time.lns  util.lns
lib/natives/src/: file_close.cpp  file_flush.cpp  file_getc.cpp  file_open.cpp  file_puts.cpp  file_strerr.cpp  input_read.cpp  input_readln.cpp  lib_files_common.h  lns_math.cpp  math_math.cpp  parsing_parsenr.cpp  std_array.cpp  std_exit.cpp  std_print.cpp  std_type.cpp  time_sleep.cpp  time_unix_timestamp.cpp
man/: lns.1
manual/: lns.1
scripts/: check_revision.sh  install.sh  install_libraries_local.sh  install_local.sh  update_lns.sh
source/: callable.cpp  callable.h  commands.cpp  commands.h  debug.cpp  debug.h  debugger_defs.h  defs.cpp  defs.h  environments.cpp  environments.h  error_message.h  errors.cpp  errors.h  exception_manager.cpp  exception_manager.h  exceptions.cpp  exceptions.h  expr.h  generate.java  generate.sh  interpreter.cpp  interpreter.h  lns.cpp  main.cpp  options.cpp  options.h  parser.cpp  parser.h  primitives.cpp  primitives.h  revision.h  scanner.cpp  scanner.h  signals.cpp  signals.h  stmt.h  token.cpp  token.h  update.cpp  (+3 more)
test/: cpptest.cpp  javatest.java  lnstest.lns  pythontest.py  test.sh
